--- a/templates/index.html
+++ b/templates/index.html
@@ -101,6 +101,37 @@
     <!-- slider_area_start -->
     <div class="slider_area">
         <div class="single_slider  d-flex align-items-center slider_bg_1">
+
+
+
+
+
+
+
+
+
+
+
+            <div class="banner">
+                <img src="/static/img/banner.jpg" alt="Banner" class="banner-image">
+                <div class="banner-text">
+                    <h1>Welcome to Bridge Ocean BV</h1>
+                    <p>Find your dream job today!</p>
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-7 col-md-6">
