--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
                             <div class="col-xl-3 col-lg-3 d-none d-lg-block">
                                 <div class="Appointment">
                                     <div class="phone_num d-none d-xl-block">
-                                        <a href="#">Log in</a>
+                                        <a href="/login">Log in</a>
                                     </div>
                                     <div class="d-none d-lg-block">
                                         <a class="boxed-btn3" href="#">Post a Job</a>
@@ -113,7 +113,7 @@
 
 
             <div class="banner">
-                <img src="/static/img/banner.jpg" alt="Banner" class="banner-image">
+                <img src="/static/img/banner/illustration.png" alt="Banner" class="banner-image">
                 <div class="banner-text">
                     <h1>Welcome to Bridge Ocean BV</h1>
                     <p>Find your dream job today!</p>
@@ -409,7 +409,7 @@
                     <div class="single_jobs white-bg d-flex justify-content-between">
                         <div class="jobs_left d-flex align-items-center">
                             <div class="thumb">
-                                <img src="/static/img/svg_icon/1.svg" alt="">
+                                <img src="/static/img/svg_icon/.svg" alt="">
                             </div>
                             <div class="jobs_conetent">
                                 <a href="job_details.html"><h4>{{ job.job_name }}</h4></a>4
@@ -704,7 +704,7 @@
                                 <div class="col-lg-11">
                                     <div class="single_testmonial d-flex align-items-center">
                                         <div class="thumb">
-                                            <img src="img/icon-user.png" alt="">
+                                            <img src="/static/img/icon-user.png" alt="">
                                             <div class="quote_icon">
                                                 <i class="Flaticon flaticon-quote"></i>
                                             </div>
@@ -730,7 +730,7 @@
                                 <div class="col-lg-11">
                                     <div class="single_testmonial d-flex align-items-center">
                                         <div class="thumb">
-                                            <img src="img/icon-user.png" alt="">
+                                            <img src="/static/img/icon-user.png" alt="">
                                             <div class="quote_icon">
                                                 <i class=" Flaticon flaticon-quote"></i>
                                             </div>
@@ -754,7 +754,7 @@
                                 <div class="col-lg-11">
                                     <div class="single_testmonial d-flex align-items-center">
                                         <div class="thumb">
-                                            <img src="img/icon-user.png" alt="">
+                                            <img src="/static/img/icon-user.png" alt="">
                                             <div class="quote_icon">
                                                 <i class="Flaticon flaticon-quote"></i>
                                             </div>
@@ -778,7 +778,7 @@
                                 <div class="col-lg-11">
                                     <div class="single_testmonial d-flex align-items-center">
                                         <div class="thumb">
-                                            <img src="img/icon-user.png" alt="">
+                                            <img src="/static/img/icon-user.png" alt="">
                                             <div class="quote_icon">
                                                 <i class="Flaticon flaticon-quote"></i>
                                             </div>
@@ -803,7 +803,7 @@
                                 <div class="col-lg-11">
                                     <div class="single_testmonial d-flex align-items-center">
                                         <div class="thumb">
-                                            <img src="img/icon-user.png" alt="">
+                                            <img src="/static/img/icon-user.png" alt="">
                                             <div class="quote_icon">
                                                 <i class="Flaticon flaticon-quote"></i>
                                             </div>
@@ -856,7 +856,7 @@
                         <div class="footer_widget wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                             <div class="footer_logo">
                                 <a href="#">
-                                    <img src="img/logo.png" alt="">
+                                    <img src="/static/img/logo.png" alt="">
                                 </a>
                             </div>
                             <p>
