--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="banner">
-        <img src="/static/img/banner.jpg" alt="Banner" class="banner-image">
+        <img src="/static/img/banner/illustration.png" alt="Banner" class="banner-image">
         <div class="banner-text">
             <h1>Login to Bridge Ocean BV</h1>
         </div>
@@ -25,7 +25,7 @@
                     <label for="password">Password</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <button type="submit" class="btn">Login</button>
+                <a href="/login"><button type="submit" class="btn">Login</button></a>
             </form>
             <p class="link">Don't have an account? <a href="/register">Register</a></p>
         </div>
