--- a/templates/register.html
+++ b/templates/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="banner">
-        <img src="/static/img/banner.jpg" alt="Banner" class="banner-image">
+        <img src="/static/img/banner/illustration.png" alt="Banner" class="banner-image">
         <div class="banner-text">
             <h1>Join Bridge Ocean BV</h1>
         </div>
